# TheSpaceBeansCrew-bot

./: README.md  copy new  embed for latter  keep_alive.py  link for commands  links for code  main.py  permissions  prefixes.json  pyproject.toml  to add later  useless for now
cogs/: mods.py
parts/: 8ball  Cogs code  cog 1  prefix
