[tool.poetry]
name = "thespacebeanscrew-bot"
version = "0.1.0"
description = "I'm too lazy"
authors = ["Corrupted wolf"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
flask = "^1.1.2"
colorama = "^0.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
